fix safe-area on ios

--- a/src/layout/LayoutWithTabBar.scss
+++ b/src/layout/LayoutWithTabBar.scss
@@ -1,15 +1,16 @@
 @import "../scss/utils";
 
 #layout {
+  @extend %fix-ios-header;
+  @extend %fix-ios-footer;
+
   &.has-tabBar {
     @extend %has-layout-footer;
   }
 
   > .tab-bar {
+    @extend %is-layout-fixed-bottom;
+
     z-index: 100;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
   }
 }
